Footer (components and styles)

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,6 @@
-.App {
+/* .app {
   text-align: center;
-}
+} */
 
 .App-logo {
   height: 40vmin;
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
