Header style modified

--- a/src/components/common/header/header.scss
+++ b/src/components/common/header/header.scss
@@ -5,17 +5,27 @@
     background-color: $background-bg-800;
     color: white;
     border-bottom: white 1px solid;
-  }
-  .title {
-    flex-grow: 1;
-    color: $accents-accent-200;
-  }
-  .linkInicio {
-    font-family: "Lato";
-    font-size: 20px;
-  }
+    .title {
+        margin-left: 40px;
+        margin-right: 40px;
+        color: $accents-accent-200;
+      }
+      .linkInicio {
+        margin-left: 40px;
+        margin-right: 40px;
+        font-family: "Lato";
+        font-size: 20px;
 
-  .peliculas .registro .login {
-    font-family: "Lato";
+      }
+      .searchButton{
+        display: flex;
+        flex-direction: row;
+        flex-grow: 1;
+      }
+      .peliculas .registro .login {
+        font-family: "Lato";
+      } 
   }
-  
+ 
+
+
