--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -121,7 +121,7 @@ button {
   line-height: 1.71;
   letter-spacing: 0.1px;
 }
-caption {
+.caption {
   font-family: Lato;
   font-size: 13px;
   font-weight: normal;
