--- a/src/containers/carousel/Section.scss
+++ b/src/containers/carousel/Section.scss
@@ -4,7 +4,7 @@
 .section-title{
     display: flex;
     height: 44px;
-    margin: 20px;
+    margin-top: 20px;
 }
 .title-container{
     height: 44px;
