--- a/src/components/FirstCarousel/FirstCarousel.scss
+++ b/src/components/FirstCarousel/FirstCarousel.scss
@@ -1,4 +1,4 @@
-@import '../css/index.scss';
+@import '../../css/index.scss';
 
 .information {
     margin-top: 150px;
@@ -13,7 +13,7 @@
     h5{
         color: $accents-accent-400;
         font-family: 'Montserrat', sans-serif;
-        font-weight: bold;
+        font-weight: normal;
         margin-right: 60px;
     }
     .more-info{
@@ -23,13 +23,13 @@
         }
         h6{
             color:$text-white-400;
-            font-weight: bold;
+            font-weight: normal;
             font-family: 'Montserrat', sans-serif;
             margin-right: 60px;
         }
         h6 span{
             color:$text-white-400;
-            font-weight: bold;
+            font-weight: normal;
             font-family: 'Montserrat', sans-serif;
             margin-right: 60px;
     
