--- a/src/components/common/section/Section.scss
+++ b/src/components/common/section/Section.scss
@@ -1,4 +1,4 @@
-@import '../../css/index.scss';
+@import '../../../css/index.scss';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
 
 .section-title{
