--- a/src/containers/carousel/Card.scss
+++ b/src/containers/carousel/Card.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    margin: 30px 15px 100px 15px;
+    margin: 40px 15px 100px 15px;
     padding: 0;
     border-radius: 16px;
     box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
@@ -72,4 +72,11 @@
 .card-container:hover {
     transform: scale(1.2) !important;
     opacity: 1 !important;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.card-img img:hover {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
