Add section movie list

--- a/src/components/common/banner/Banner.scss
+++ b/src/components/common/banner/Banner.scss
@@ -1,7 +1,7 @@
 @import '../../../css/index.scss';
 
 .banner{
-    margin: 150px 5%;
+    margin: 15% 5%;
     font-family: Montserrat;
     font-size: 50px;
     font-weight: 600;
