--- a/src/containers/carousel/Card.scss
+++ b/src/containers/carousel/Card.scss
@@ -16,7 +16,7 @@
 
 .card-img img {
     width: 230px;
-    height: 354px;
+    height: 320px;
     flex-grow: 0;
     border-radius: 16px 16px 0 0;
     cursor: pointer;
@@ -40,6 +40,7 @@
 .rated {
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
 
     .star span {
         color: $accents-accent-400;
