Fixed som errors

--- a/src/components/common/banner/Banner.scss
+++ b/src/components/common/banner/Banner.scss
@@ -1,9 +1,10 @@
 @import '../../../css/index.scss';
 
 .banner{
-    margin: 15% 5%;
+    margin-top: 136px;
+    margin-bottom: 75px;
     font-family: Montserrat;
-    font-size: 50px;
+    font-size: 48px;
     font-weight: 600;
     text-align: center;
     color: $text-white-400;
