--- a/src/components/pages/login/login.scss
+++ b/src/components/pages/login/login.scss
@@ -55,6 +55,9 @@
         color: $text-black-900;
         background-color: $accents-accent-400;
       }
+      .loginButton:hover {
+        cursor: pointer;
+      }
     }
   }
 }
