--- a/src/components/pages/signup/signup.scss
+++ b/src/components/pages/signup/signup.scss
@@ -32,15 +32,15 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-      .nameSection{
+      .nameSection {
         display: flex;
         width: 100%;
         gap: 24px;
-        div{
+        div {
+          width: 100%;
+          input {
             width: 100%;
-            input{
-                width: 100%;
-            }
+          }
         }
       }
       .text {
@@ -66,6 +66,9 @@
         border-radius: 8px;
         color: $text-black-900;
         background-color: $accents-accent-400;
+      }
+      .signupButton:hover {
+        cursor: pointer;
       }
     }
   }
