Add components of Movies

--- a/src/components/common/moviesList/movieslist.scss
+++ b/src/components/common/moviesList/movieslist.scss
@@ -27,13 +27,14 @@
             font-family: 'Montserrat', sans-serif;
             margin-right: 60px;
         }
-        h6 span{
+        h6 a{
             color:$text-white-400;
             font-weight: normal;
             font-family: 'Montserrat', sans-serif;
             margin-right: 60px;
     
         }
+        
     }
 }
 
