--- a/src/components/common/moviesList/movieslist.scss
+++ b/src/components/common/moviesList/movieslist.scss
@@ -21,18 +21,24 @@
             text-decoration: underline;
             font-family: 'Montserrat', sans-serif;
         }
-        h6{
-            color:$text-white-400;
-            font-weight: normal;
-            font-family: 'Montserrat', sans-serif;
-            margin-right: 60px;
+        .muiBotton-label{
+            text-align: center;
         }
-        h6 span{
+        h6 a{
+            font-weight: 80;
             color:$text-white-400;
-            font-weight: normal;
+            font-weight: 400;
             font-family: 'Montserrat', sans-serif;
-            margin-right: 60px;
-    
+            margin-right: 10px;
+            margin-right: 10px;
+        }
+
+        .buttons {
+            width: 80%;
+            align-content: center;
+            display: flex;
+            gap: 40px;
+            margin-right: 80px;
         }
     }
 }
