Modifacion de texto en componente movieList y texto en navbar

--- a/src/components/common/header/header.scss
+++ b/src/components/common/header/header.scss
@@ -10,6 +10,10 @@
     margin-right: 40px;
     color: $accents-accent-200;
   }
+  .user{
+    font-family: "Lato";
+    color:$accents-accent-400;
+  }
   .linkInicio {
     margin-left: 40px;
     margin-right: 40px;
