--- a/src/components/common/selectCategorySlider/SelectCategorySlider.scss
+++ b/src/components/common/selectCategorySlider/SelectCategorySlider.scss
@@ -15,36 +15,56 @@
     }
 }
 
+
 .slider-container{
     width: 90vw;
     height: 400px;
     margin-top: 1.5rem;
     margin-left: 5vw;
 
-  
+    .slick-slider, .slick-initialized {
+        height: 400px !important;
+    }
+
     .slider-card-container{
         height: 354px;
         width: 230px !important;
         background-color: $accents-accent-400;
         border-radius: 16px;
         margin: 20px;
+        transition: ease-out .4s;
     }
     
+
     .slider-card-container img {
         border-radius: 16px;
         width: 230px;
         height: 354px;
+        transition: ease-out .4s;
     }
 
+    
 
     .slick-slide.slick-active.slick-center.slick-current {
         transform: scale(110%);
-        transition: ease .3s;
-       
-            
+        transition: ease-in .4s;
      }
-    
-    
+
+     .slick-slide.slick-active.slick-center.slick-current:hover{
+         transform: scale(120%);
+         cursor: pointer;
+         transition: ease-in .4s;
+     }
+     
+     .slick-arrow.slick-prev, .slick-arrow.slick-next {
+        transition: ease-in .4s;
+     }    
     
 }
 
+@media screen and (max-width: 576px){
+    .slider-container{
+        width: 85vw;
+        margin-left: 10vw;
+    }
+}
