--- a/src/components/common/selectCategorySlider/SelectCategorySlider.scss
+++ b/src/components/common/selectCategorySlider/SelectCategorySlider.scss
@@ -17,10 +17,12 @@
 
 
 .slider-container{
-    width: 90vw;
+    width: 80vw;
     height: 400px;
     margin-top: 1.5rem;
-    margin-left: 5vw;
+    margin-left: auto;
+    margin-right: auto;
+    
 
     .slick-slider, .slick-initialized {
         height: 400px !important;
@@ -64,7 +66,7 @@
 
 @media screen and (max-width: 576px){
     .slider-container{
-        width: 85vw;
+        width: 80vw;
         margin-left: 10vw;
     }
 }
