--- a/src/components/common/modal/modal.scss
+++ b/src/components/common/modal/modal.scss
@@ -9,14 +9,8 @@
 		flex-wrap: wrap;
 		align-items: center;
 		justify-content: center;
-		z-index: 1;
-		// .modal-image {
-		// 	img {
-		// 		height: 444px;
-		// 		width: 286px;
-		// 		border-radius: 16px;
-		// 	}
-		// }
+		z-index: 0;
+		
 		.modal-content {
 			background-color: #f2f4f9;
 			width: 530px;
@@ -24,6 +18,24 @@
 			border-top-right-radius: 8px;
 			border-bottom-right-radius: 8px;
 			padding: 16px 24px;
+			z-index: 0;
+			.close-modal{
+				height: 30px;
+				align-self: stretch;
+				flex-grow: 0;
+				font-family: "Montserrat", sans-serif;
+				font-size: 28px;
+				font-weight: normal;
+				font-stretch: normal;
+				font-style: normal;
+				line-height: normal;
+				letter-spacing: 0.25px;
+				text-align: right;
+				color: #e08100;
+				margin: 0px 8px 8px 8px;
+				cursor: pointer;
+
+			}
 			h5 {
 				height: 58px;
 				font-size: 24px;
@@ -36,6 +48,7 @@
 				line-height: normal;
 				letter-spacing: normal;
 				text-align: left;
+				margin-top: 10px;
 			}
 			hr {
 				height: 1px;
@@ -52,6 +65,7 @@
 				align-items: stretch;
 				gap: 24px;
 				padding: 0;
+				margin:0;
 				.elements-name {
 					height: 24px;
 					line-height: 1.71;
@@ -75,7 +89,7 @@
 						line-height: 1.33;
 						letter-spacing: 0.25px;
 						text-align: left;
-						margin-bottom: 16px;
+						margin-bottom: 1px;
 					}
 				}
 				.pub-dir-rep {
@@ -83,7 +97,7 @@
 				}
 			}
 			.show-more {
-				width: 40%;
+				width: 60%;
 				display: flex;
 				flex-direction: row;
 				border-radius: 8px;
@@ -94,6 +108,8 @@
 				padding: 8px 40px;
 				border: none;
 				margin-bottom: 8px;
+				margin-top: -15px;
+				cursor: pointer;
 			}
 			display: flex;
 			flex-direction: column;
@@ -111,6 +127,7 @@
 				color: #507880;
 				margin: 8px 8px 0px 8px;
 			}
+	
 			.calification-number {
 				height: 41px;
 				align-self: stretch;
@@ -127,5 +144,49 @@
 				margin: 0px 8px 8px 8px;
 			}
 		}
+
 	}
+}
+
+@media screen and (max-width: 1028px ){
+	.modal {
+		display: block;
+		position: absolute;
+		margin-top: -25px;
+		margin-right: 500px;
+		height: 700px;
+		width: 350px;
+	}
+	.close-modal{
+		margin-top: 10px !important;
+	}
+	.modal-content {
+		background-color: #f2f4f9;
+		width: 500px !important;
+		height: 500px !important;
+		border-radius: 8px !important;
+		margin-top: 0px;
+		
+	}
+	h5{
+		height: 40px !important;
+		font-size: 20px !important;
+		margin-bottom: 20px;
+	}
+	
+	.calification-number {
+		font-size: 30px !important;
+		display: flex !important;
+		align-self: flex-end !important;  
+		
+	}
+	
+	
+}
+
+@media screen and (max-width: 576px){
+	.modal {
+	display: none;
+
+}
 }
