--- a/src/containers/movieSlider/slider/MovieSlider.scss
+++ b/src/containers/movieSlider/slider/MovieSlider.scss
@@ -1,63 +1,110 @@
-@import '../../../css/index.scss';
+@import "../../../css/index.scss";
 
 .select-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 85%;
-    margin-left: 40px;
-    
-    
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 85%;
+  margin-left: 40px;
 
-    #demo-simple-select-filled{
-        color: $accents-accent-400;
-        align-self: baseline;
-    }
+  #demo-simple-select-filled {
+    color: $accents-accent-400;
+    align-self: baseline;
+  }
 }
 
+.slider-container {
+  width: 86vw;
+  height: 400px;
+  margin-top: 1.5rem;
+  margin-left: 5vw;
+  margin-right: auto;
 
-.slider-container{
-    width: 86vw;
-    height: 400px;
-    margin-top: 1.5rem;
-    margin-left: 5vw;
+  .slick-slider,
+  .slick-initialized {
+    height: 400px !important;
+    margin-left: 10px;
+  }
+
+  .slick-slide.slick-active {
+    img {
+      z-index: -2;
+    }
+  }
+  .slick-slide.slick-active.slick-center.slick-current {
+    img {
+      transform: scale();
+      height: 444px;
+      width: 286px;
+      border-radius: 16px;
+      transition: 0.4s ease-in-out;
+      cursor: pointer;
+      z-index: 0;
+    }
+  }
+
+  .slick-next::before,
+  .slick-prev::before {
+    font-size: 30px;
+  }
+  .slick-prev::before {
+    margin-right: 2vw;
+  }
+  .slick-next::before {
+    margin-left: 2vw;
+  }
+}
+
+@media screen and (max-width: 1028px) {
+  .slider-container {
+    width: 80vw;
+    margin-left: 9vw;
     margin-right: auto;
-    
 
-    .slick-slider, .slick-initialized {
-        height: 400px !important;
-        margin-left: 10px;
+    .slick-slide.slick-active.slick-center.slick-current {
+        img {
+            transform: scale();
+          height: 374px;
+            width: 250px;
+          border-radius: 16px;
+          transition: 0.4s ease-in-out;
+          cursor: pointer;
+          z-index: 0;
+        }
+      }
+
+    .slick-next::before,
+    .slick-prev::before {
+      font-size: 20px;
     }
 
-    .slick-next::before, .slick-prev::before  {
-        font-size: 40px;
-    }
-    .slick-prev::before{
-        margin-right: 2vw;
-    }
-    .slick-next::before{
-        margin-left: 2vw;
+    .slick-prev::before {
+      margin-right: 1vw;
     }
 
-    
+    .slick-next::before {
+      margin-left: 1vw;
+    }
+  }
 }
 
-@media screen and (max-width: 576px){
-    .slider-container{
-        width: 80vw;
-        margin-left: 9vw;
-        margin-right: auto;
-
-        .slick-next::before, .slick-prev::before  {
-            font-size: 20px;
-        }
-
-        .slick-prev::before{
-            margin-right: 1vw;
-        }
-
-        .slick-next::before{
-            margin-left: 1vw;
-        }
+@media screen and (max-width: 1028px) {
+    .slick-slider,
+    .slick-initialized{
+        height: 800px !important;
+        
     }
+    
+
 }
+@media screen and (max-width: 576px) {
+    .slick-slider,
+    .slick-initialized,
+    .slick-track {
+        height: 80vh !important;
+        
+    }
+    
+
+}
+
